<?xml version="1.0"?>
<package format="2">
  <name>traj_utils</name>
  <version>1.2.0</version>
  <description>The traj_utils package</description>
  <author email="bzhouai@todo.todo">bzhouai</author>
  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>bspline_opt</depend>

  <build_depend>path_searching</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>catkin</build_export_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
